# libcryptsetup-rs

./: .gitmodules  .packit.yaml  .travis.yml  CHANGES.txt  Cargo.toml  Makefile  README.md  build.rs
.githooks/: pre-commit
.github/workflows/: cargo.yml  main.yml  nightly.yml  weekly.yml
cryptsetup-cli-proc-macro/: Cargo.toml
cryptsetup-cli-proc-macro/src/: lib.rs
cryptsetup-cli-proc-macro/tests/: macros.rs
cryptsetup-sys/: .gitignore  Cargo.toml  build.rs
cryptsetup-sys/src/: lib.rs
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/libcryptsetup_rs/: all.html  enum.Bool.html  enum.CryptActivateFlag.html  enum.CryptDeactivateFlag.html  enum.CryptDebugLevel.html  enum.CryptKdf.html  enum.CryptLogLevel.html  enum.CryptPbkdfFlag.html  enum.CryptReencryptDirectionInfo.html  enum.CryptReencryptFlag.html  enum.CryptReencryptInfo.html  enum.CryptReencryptModeInfo.html  enum.CryptRequirementFlag.html  enum.CryptRngFlag.html  enum.CryptStatusInfo.html  enum.CryptTokenInfo.html  enum.CryptVerityFlag.html  enum.CryptVolumeKeyFlag.html  enum.CryptWipePattern.html  enum.Either.html  enum.EncryptionFormat.html  enum.Interrupt.html  enum.KeyslotInfo.html  enum.KeyslotPriority.html  enum.LibcryptErr.html  enum.LockState.html  enum.LuksType.html  enum.MetadataSize.html  index.html  macro.c_confirm_callback!.html  macro.c_confirm_callback.html  macro.c_logging_callback!.html  macro.c_logging_callback.html  macro.c_progress_callback!.html  macro.c_progress_callback.html  macro.c_str!.html  macro.c_str.html  macro.c_token_handler_dump!.html  macro.c_token_handler_dump.html  macro.c_token_handler_free!.html  (+44 more)
doc/libcryptsetup_rs/activate/: enum.CryptActivateFlag.html  enum.CryptDeactivateFlag.html  struct.CryptActivateFlags.html  struct.CryptActivation.html  struct.CryptDeactivateFlags.html
doc/libcryptsetup_rs/backup/: struct.CryptBackup.html
doc/libcryptsetup_rs/context/: struct.CryptContext.html
doc/libcryptsetup_rs/debug/: enum.CryptDebugLevel.html  struct.CryptDebug.html
doc/libcryptsetup_rs/device/: struct.CryptDevice.html  struct.CryptInit.html
doc/libcryptsetup_rs/err/: enum.LibcryptErr.html
doc/libcryptsetup_rs/format/: enum.CryptVerityFlag.html  enum.EncryptionFormat.html  struct.CryptFormat.html  struct.CryptParamsIntegrity.html  struct.CryptParamsIntegrityRef.html  struct.CryptParamsLuks2.html  struct.CryptParamsLuks2Ref.html  struct.CryptParamsVerity.html  struct.CryptVerityFlags.html
doc/libcryptsetup_rs/key/: struct.CryptVolumeKey.html
doc/libcryptsetup_rs/keyfile/: struct.CryptKeyfile.html  struct.CryptKeyfileContents.html
doc/libcryptsetup_rs/keyslot/: enum.CryptVolumeKeyFlag.html  enum.KeyslotInfo.html  enum.KeyslotPriority.html  struct.CryptKeyslot.html  struct.CryptVolumeKeyFlags.html
doc/libcryptsetup_rs/log/: enum.CryptLogLevel.html  struct.CryptLog.html
doc/libcryptsetup_rs/luks2_flags/: enum.CryptRequirementFlag.html  struct.CryptLuks2Flags.html  struct.CryptRequirementFlags.html
doc/libcryptsetup_rs/luks2_reencrypt/: enum.CryptReencryptDirectionInfo.html  enum.CryptReencryptFlag.html  enum.CryptReencryptInfo.html  enum.CryptReencryptModeInfo.html  struct.CryptLuks2Reencrypt.html  struct.CryptParamsReencrypt.html  struct.CryptParamsReencryptRef.html  struct.CryptReencryptFlags.html
doc/libcryptsetup_rs/luks2_token/: enum.CryptTokenInfo.html  struct.CryptLuks2Token.html
doc/libcryptsetup_rs/runtime/: struct.ActiveDevice.html  struct.CryptRuntime.html
doc/libcryptsetup_rs/settings/: enum.CryptKdf.html  enum.CryptPbkdfFlag.html  enum.CryptRngFlag.html  enum.LockState.html  enum.LuksType.html  enum.MetadataSize.html  struct.CryptPbkdfFlags.html  struct.CryptPbkdfType.html  struct.CryptPbkdfTypeRef.html  struct.CryptSettings.html  struct.KeyslotsSize.html
doc/libcryptsetup_rs_sys/: all.html  constant.CRYPT_ACTIVATE_ALLOW_DISCARDS.html  constant.CRYPT_ACTIVATE_ALLOW_UNBOUND_KEY.html  constant.CRYPT_ACTIVATE_CHECK_AT_MOST_ONCE.html  constant.CRYPT_ACTIVATE_CORRUPTED.html  constant.CRYPT_ACTIVATE_IGNORE_CORRUPTION.html  constant.CRYPT_ACTIVATE_IGNORE_PERSISTENT.html  constant.CRYPT_ACTIVATE_IGNORE_ZERO_BLOCKS.html  constant.CRYPT_ACTIVATE_KEYRING_KEY.html  constant.CRYPT_ACTIVATE_NO_JOURNAL.html  constant.CRYPT_ACTIVATE_NO_JOURNAL_BITMAP.html  constant.CRYPT_ACTIVATE_NO_UUID.html  constant.CRYPT_ACTIVATE_PRIVATE.html  constant.CRYPT_ACTIVATE_READONLY.html  constant.CRYPT_ACTIVATE_RECALCULATE.html  constant.CRYPT_ACTIVATE_RECOVERY.html  constant.CRYPT_ACTIVATE_REFRESH.html  constant.CRYPT_ACTIVATE_RESTART_ON_CORRUPTION.html  constant.CRYPT_ACTIVATE_SAME_CPU_CRYPT.html  constant.CRYPT_ACTIVATE_SERIALIZE_MEMORY_HARD_PBKDF.html  constant.CRYPT_ACTIVATE_SHARED.html  constant.CRYPT_ACTIVATE_SUBMIT_FROM_CRYPT_CPUS.html  constant.CRYPT_ACTIVATE_SUSPENDED.html  constant.CRYPT_ANY_SLOT.html  constant.CRYPT_ANY_TOKEN.html  constant.CRYPT_BITLK.html  constant.CRYPT_COMPAT_LEGACY_INTEGRITY_PADDING.html  constant.CRYPT_DEACTIVATE_DEFERRED.html  constant.CRYPT_DEACTIVATE_FORCE.html  constant.CRYPT_DEBUG_ALL.html  constant.CRYPT_DEBUG_JSON.html  constant.CRYPT_DEBUG_NONE.html  constant.CRYPT_INTEGRITY.html  constant.CRYPT_KDF_ARGON2I.html  constant.CRYPT_KDF_ARGON2ID.html  constant.CRYPT_KDF_PBKDF2.html  constant.CRYPT_KEYFILE_STOP_EOL.html  constant.CRYPT_LOG_DEBUG.html  constant.CRYPT_LOG_DEBUG_JSON.html  constant.CRYPT_LOG_ERROR.html  (+375 more)
examples/: Cargo.toml  add-key-to-persistent-keyring.rs  callback_macro.rs  cryptsetup-luks2.rs  format-luks2-with-token.rs  label.rs  unlock-luks2-with-token.rs
libcryptsetup-rs-sys/: Cargo.toml  build.rs  header.h
libcryptsetup-rs-sys/src/: lib.rs
src/: activate.rs  backup.rs  context.rs  debug.rs  device.rs  err.rs  format.rs  key.rs  keyfile.rs  keyslot.rs  lib.rs  log.rs  luks2_flags.rs  luks2_reencrypt.rs  luks2_token.rs  macros.rs  mem.rs  mutex.rs  runtime.rs  settings.rs  status.rs  wipe.rs
src/cli/: macros.rs
src/consts/: flags.rs  vals.rs
src/luks2/: flags.rs  reencrypt.rs  token.rs
src/tests/: encrypt.rs  init.rs  keyfile.rs  loopback.rs  mod.rs  reencrypt.rs
(+47 files in other folders)
