[package]
name = "libcryptsetup-rs"
version = "0.9.1"
authors = ["John Baublitz <jbaublitz@redhat.com>"]
edition = "2021"
rust-version = "1.71.1"  # LOWEST SUPPORTED RUST TOOLCHAIN
description = "High level Rust bindings for libcryptsetup"
license = "MPL-2.0"
documentation = "https://docs.rs/libcryptsetup-rs"
homepage = "https://stratis-storage.github.io/"
repository = "https://github.com/stratis-storage/libcryptsetup-rs"
build = "build.rs"
keywords = ["Linux", "encryption", "storage"]
categories = ["cryptography", "api-bindings", "os::linux-apis"]
exclude = [".clippy.toml", ".githooks/*", ".gitignore", ".github/*", "Makefile"]

[dependencies.libcryptsetup-rs-sys]
version = "0.3.0"
path = "./libcryptsetup-rs-sys"

[dependencies]
either = "1.6.1"
libc = "0.2.139"
bitflags = "2.3.0"
log = "0.4.19"
serde_json = "1.0.0"
lazy_static = "1.4.0"

[dependencies.uuid]
version = "1.0.0"
features = ["v4"]

[build-dependencies]
pkg-config = "0.3.7"
semver = "1.0.0"

[dev-dependencies]
base64 = "0.21.0"
env_logger = "0.10.0"
loopdev-3 = "0.5.0"
nix = {version="0.27.1", features=["user"]}
rand = "0.8.0"

[features]
mutex = []
