[package]
name = "cryptsetup-cli-proc-macro"
version = "0.1.0"
authors = ["John Baublitz <jbaublitz@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "*"
syn = {version = "*", features = ["full", "extra-traits"]}

[features]
default = ["macro-code"]
macro-code = []
