[package]
name = "libcryptsetup-rs-examples"
version = "0.1.0"
authors = ["John Baublitz <jbaublitz@redhat.com>"]
edition = "2018"

[[bin]]
name = "cryptsetup-luks2"
path = "cryptsetup-luks2.rs"

[[bin]]
name = "format-luks2-with-token"
path = "format-luks2-with-token.rs"

[[bin]]
name = "unlock-luks2-with-token"
path = "unlock-luks2-with-token.rs"

[dependencies.libcryptsetup-rs-sys]
version = "0.1.0"
path = "../libcryptsetup-rs-sys"

[dependencies]
libcryptsetup-rs = { path = ".." }
serde_json = "*"
uuid = {version = "*", features = ["v4"]}
keyutils = "0.2.1"
