[package]
name = "libcryptsetup-rs-sys"
version = "0.2.1"
authors = ["John Baublitz <jbaublitz@redhat.com>"]
edition = "2021"
rust-version = "1.62.1"
description = "Low level bindings for libcryptsetup"
license = "MPL-2.0"
documentation = "https://docs.rs/libcryptsetup-rs-sys"
homepage = "https://stratis-storage.github.io/"
repository = "https://github.com/stratis-storage/libcryptsetup-rs"
categories = ["external-ffi-bindings", "os::linux-apis"]
keywords = ["storage", "cryptsetup"]

[build-dependencies]
cc = "1.0.45"
pkg-config = "0.3.7"
semver = "1.0.0"

[build-dependencies.bindgen]
default_features = false
features = ["runtime"]
version = "0.59.0"
