[package]
name = "libcryptsetup-rs-sys"
version = "0.6.1"
authors = ["John Baublitz <jbaublitz@redhat.com>"]
edition = "2021"
rust-version = "1.77.0"  # LOWEST SUPPORTED RUST TOOLCHAIN
description = "Low level bindings for libcryptsetup"
license = "MPL-2.0"
documentation = "https://docs.rs/libcryptsetup-rs-sys"
homepage = "https://stratis-storage.github.io/"
repository = "https://github.com/stratis-storage/libcryptsetup-rs"
categories = ["external-ffi-bindings", "os::linux-apis"]
keywords = ["storage", "cryptsetup"]

[build-dependencies]
cc = "1.0.45"
pkg-config = "0.3.17"
semver = "1.0.0"

[build-dependencies.bindgen]
version = "0.72.0"

[lints.rust]
warnings = { level = "deny" }
future_incompatible = { level = "deny", priority = 1 }
unused = { level = "deny", priority = 2}
rust_2018_idioms = { level = "deny", priority = 3 }
nonstandard_style = { level = "deny", priority = 4 }

[lints.clippy]
all = { level = "deny" }
cargo = { level = "deny", priority = 1 }
multiple-crate-versions = { level = "allow", priority = 2 }

[features]
static = []
